# myspine

./: 0napari_viewer.py  1-1dataset_scipt.py  1-2dataset_scipt.py  1dataset_scipt.py  2train_script.py  3predict_test.py  all_requirements.txt  environment_bat.bat  readme.md  requirements.txt  rrequirements.txt  test-num.py  todo-setup.py
config/: defalut2d.yaml  defalut_2d_border.yaml  defalut_2d_border2.yaml  defalut_2d_border4.yaml  defalut_2d_den.yaml  (+17 more)
spine-segment-pipeline/: README.md  requirements copy.txt  requirements.txt  setup.cfg
spine-segment-pipeline/spine_segment_pipeline/: __dock__widget.py  __dock__widget_predict.py  __dock__widget_recon.py  __init__.py  __variables__.py  _sample_data.py  napari.yaml
spine-segment-pipeline/spine_segment_pipeline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
spine-segment-pipeline/spine_segment_pipeline/cflow/: __init__.py  blob.py  localthreadhold.py  meanshift_23D.py
spine-segment-pipeline/spine_segment_pipeline/imgio/: __init__.py  imgio_base.py  napari_base.py  random_color.py
spine-segment-pipeline/spine_segment_pipeline/networks/: BaseNet.py  ERFNet.py  UNet.py  unetplusplus.py  wnet.py
spine-segment-pipeline/spine_segment_pipeline/seg/: __init__.py  seg_base.py  segment.py  trace.py  unetseg.py
spine-segment-pipeline/spine_segment_pipeline/strutensor/: hessian.py  transform.py
spine-segment-pipeline/spine_segment_pipeline/utils/: __init__.py  defalut_2d_seg copy.yaml  defalut_2d_seg.yaml  file_base.py  measure.py  npixel.py  spine_struct.py  spine_struct1.py  yaml_config.py
(+117 files in other folders)
