[metadata]
name = spine-segment-pipeline
version = 0.0.1
description = A simple tool to segment spine with snake contour method
long_description = file: README.md
author = Fjscah
author_email = Epichide@gmail.com
license = GNU
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Testing


[options]
packages = find:
install_requires =
    numpy
    scikit-image
python_requires = >=3.8


[options.entry_points]
napari.manifest =
    spine-segment-pipeline = spine_segment_pipeline:napari.yaml


